# DIP_benchmark

./: Cargo.toml  README.md  result.txt  run_benchmarks.sh
circuits/: AND@gates_rejected_input.json  AliasCheck@aliascheck_input.json  BabyAdd@babyjub_input.json  BabyCheck@babyjub_input.json  BinSub@binsub.r1cs  BinSub@binsub.sym  BinSub@binsub_input.json  BinSum@binsum.r1cs  BinSum@binsum.sym  BinSum@binsum_input.json  BitElementMulAny@escalarmulany_input.json  Bits2Num@bitify.r1cs  Bits2Num@bitify.sym  Bits2Num@bitify_input.json  Bits2Num_strict@bitify.r1cs  Bits2Num_strict@bitify.sym  Bits2Num_strict@bitify_input.json  Bits2Point@pointbits_input.json  Bits2Point_Strict@pointbits.r1cs  Bits2Point_Strict@pointbits.sym  Bits2Point_Strict@pointbits_input.json  CompConstant@compconstant.r1cs  CompConstant@compconstant_input.json  Decoder@multiplexer.sym  Decoder@multiplexer_input.json  EdDSAMiMCSpongeVerifier@eddsamimcsponge.r1cs  EdDSAMiMCSpongeVerifier@eddsamimcsponge.sym  EdDSAMiMCSpongeVerifier@eddsamimcsponge_input.json  EdDSAPoseidonVerifier@eddsaposeidon.r1cs  EdDSAPoseidonVerifier@eddsaposeidon.sym  EdDSAVerifier@eddsa.r1cs  EdDSAVerifier@eddsa.sym  EdDSAVerifier@eddsa_input.json  EscalarMulAny@escalarmulany.r1cs  EscalarMulAny@escalarmulany.sym  EscalarMulAny@escalarmulany_input.json  EscalarMulFix@escalarmulfix_input.json  EscalarMulWindow@escalarmul_input.json  EscalarProduct@multiplexer.r1cs  EscalarProduct@multiplexer.sym  (+85 more)
circuits/AND@gates_js/: AND@gates.wasm
circuits/AliasCheck@aliascheck_js/: AliasCheck@aliascheck.wasm
src/: main.rs  r1cs.rs
(+66 files in other folders)
