[package]
name = "dogecoin_zkp_generator_qa1"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false, features = ["std", "print-trace"] }
hex = "0.4" # For hex encoding/decoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4" # For binary parsing of R1CS file
r1cs-file = "0.3.0" # For parsing R1CS files according to iden3 format
ark-circom = "0.5.0" # For Circom compatibility (matches arkworks 0.4.0 versions)
num-bigint = "0.4" # Required by ark-circom for witness values
wasmer = "4.2.0" # Required by ark-circom 0.5.0 for WitnessCalculator
tokio = { version = "1", features = ["full"] } # Add tokio